updated resume link -  added real resume

--- a/myweb/index.html
+++ b/myweb/index.html
@@ -96,7 +96,7 @@
         </div>
       </div>
       <div class="footer">
-        <a href="images/test.jpg" download="test"
+        <a href="images/vidha-resume.jpg" download="vidha-resume"
             ><button>
               Resume
             </button>
