added updated resume to index.html

--- a/myweb/index.html
+++ b/myweb/index.html
@@ -96,7 +96,7 @@
         </div>
       </div>
       <div class="footer">
-        <a href="images/vidha-resume.jpg" download="vidha-resume"
+        <a href="images/Vidha-resume-final.pdf" download="vidha-resume"
             ><button>
               Resume
             </button>
