another correcting the UI update

--- a/myweb/index.html
+++ b/myweb/index.html
@@ -80,12 +80,12 @@
             My languages and tools:
           </p>
           <div class="info-container">
-            <img src="/images/langs/html.png">
-            <img src="/images/langs/css.png">
-            <img src="/images/langs/js.png">
-            <img src="/images/langs/python.png">
-            <img src="/images/langs/vscode.png">
-            <img src="/images/langs/notepad.png">
+            <img src="./images/langs/html.png">
+            <img src="./images/langs/css.png">
+            <img src="./images/langs/js.png">
+            <img src="./images/langs/python.png">
+            <img src="./images/langs/vscode.png">
+            <img src="./images/langs/notepad.png">
           </div>
           <p id="copyright">
             Copyright@2023 - VIDHA SINGH CHAUHAN
