--- a/myweb/index.html
+++ b/myweb/index.html
@@ -66,15 +66,21 @@
           <p id="info-text1">
             Hi. I'm a 17 y/o self taught Web Developer based in Delhi NCR, India. Currently <br> an HS Student,
             Senior year, I love listening to music, I've been lately listening <br>to
-            <a href="https://open.spotify.com/track/2kJwzbxV2ppxnQoYw4GLBZ?si=0e692beaf4a2486d"> this song!</a>
+            <a href="https://open.spotify.com/track/0JIhRhZPF5j5dx0FGqTWxy?si=fd7e1b781f61425a"> this song!</a>
           </p>
+          <!-- <iframe style="border-radius:12px; margin-left: 5%; margin-top: 2%;margin-bottom: 0px;" src="https://open.spotify.com/embed/track/0JIhRhZPF5j5dx0FGqTWxy?utm_source=generator" width="20%" height="130px" frameBorder="0" allowfullscreen="" 
+            allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe> -->
           <p id="info-text2">
             Well in 2022 I decided I won't be thaaaat shy person ever again and started on my <br> journey to live my life to the fullest! 
             So here I am in a challenge, I'm making this <br>website just in 1 day, with 95% of my own hand written code. I hope you like it!
           </p>
           <p id="info-text3">
             I've been keenly interested in CS and web/game development since past 3 years!<br> I also have been working as a video editor,
-            photoshop artist, graphic designer<br> digital artist on personal basis. All of the details have been given on my resume.
+            photoshop artist, graphic designer,<br> digital artist on personal basis. All of the details have been given on my resume.
+          </p>
+          <p id="info-text4">
+            I recently wrote a book - Reminiscing Memories, which contains all my favourite<br> creative writings i did from childhood to present. 
+            Check it out on the bottom right.
           </p>
           <p id="info-text4" style="margin-top: 50px;;">
             My languages and tools:
@@ -91,7 +97,7 @@
             Copyright@2023 - VIDHA SINGH CHAUHAN
           </p>
           <p id="openly-hosted">
-            The code is open source at <a href="https://github.com/Vidhaaaaaa">Github</a>
+            The code is open source at <a href="https://github.com/Vidhaaaaaa/personal-website">Github</a>
           </p>
         </div>
       </div>
@@ -101,7 +107,11 @@
               Resume
             </button>
           </a>
-          
+          <a href="https://notionpress.com/read/reminiscing-memories-1395556"
+            ><button>
+              Publications
+            </button>
+          </a>
           <a href="https://scrapbook.hackclub.com/Vidhaaaaa"
             ><button>
               Scrapbook
