--- a/myweb/index.html
+++ b/myweb/index.html
@@ -64,7 +64,7 @@
 
         <div class="info-div">
           <p id="info-text1">
-            Hi. I'm a 17 y/o self taught Web Developer based in Delhi NCR, India. Currently <br> an HS Student,
+            Hi. I'm an 18 y/o self taught Web Developer based in Delhi NCR, India. The Co-Founder of <a href="https://blizzy-waitlist.onrender.com/">Blizzy</a>. Currently <br> an HS Student,
             Senior year, I love listening to music, I've been lately listening <br>to
             <a href="https://open.spotify.com/track/0JIhRhZPF5j5dx0FGqTWxy?si=fd7e1b781f61425a"> this song!</a>
           </p>
