--- a/myweb/index.html
+++ b/myweb/index.html
@@ -64,16 +64,14 @@
 
         <div class="info-div">
           <p id="info-text1">
-            Hi. I'm an 18 y/o self taught Web Developer based in Jaipur, India. Currently an HS Student,
-            Senior year, I love listening to music, I've been lately listening to
+            Hi. I'm an 18 y/o self taught full stack Web Developer based in Jaipur, India. Currently an Engineering Student. I love listening to music, I've been lately listening to
           </p>
 
-          <iframe style="border-radius:12px; margin-left: 5%; margin-top: 2%;margin-bottom: 0px;" src="https://open.spotify.com/embed/track/502bB8gNaEtp39Om89OjUu?utm_source=generator" width="50%" height="auto" frameBorder="0" allowfullscreen="" 
+          <iframe style="border-radius:12px; margin-left: 5%; margin-top: 2%;margin-bottom: 0px;" src="https://open.spotify.com/embed/track/502bB8gNaEtp39Om89OjUu?utm_source=generator" width="50%" height="130px" frameBorder="0" allowfullscreen="" 
             allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 
           <p id="info-text2">
-            I've been keenly interested in CS and web/game development since past 3 years! I also have been working as a video editor,
-            photoshop artist, graphic designer, digital artist on personal basis. All of the details have been given on my resume.
+            I've been keenly interested in CS and web/software development since past 2 years!  All of the details have been given on my resume.
           </p>
           <p id="info-text3">
             I recently wrote a book - Reminiscing Memories, which contains all my favourite creative writings i did from childhood to present. 
@@ -87,9 +85,9 @@
             <img src="./images/langs/css.png">
             <img src="./images/langs/js.png">
             <img src="./images/langs/python.png">
+            <img src="./images/langs/flask.png">
             <img src="./images/langs/vscode.png">
             <img src="./images/langs/notepad.png">
-            <img src="./images/langs/flask.png">
           </div>
           <p id="copyright">
             Copyright@2024 - VIDHA SINGH CHAUHAN
@@ -100,17 +98,17 @@
         </div>
       </div>
       <div class="footer">
-        <a href="images/Vidha-resume-final.pdf" download="vidha-resume"
+        <a id="bttn" href="images/Vidha-resume-final.pdf" target="_blank"
             ><button>
               Resume
             </button>
           </a>
-          <a href="https://notionpress.com/read/reminiscing-memories-1395556"
+          <a id="bttn" href="https://notionpress.com/read/reminiscing-memories-1395556" target="_blank"
             ><button>
               Publications
             </button>
           </a>
-          <a href="https://scrapbook.hackclub.com/Vidhaaaaa"
+          <a id="bttn" href="https://scrapbook.hackclub.com/Vidhaaaaa" target="_blank"
             ><button>
               Scrapbook
             </button>
